css/core.css
/* ... */
    #dark .admonition.tweet {
        background-color: hsla(203, 89%, 53%, 0.15);
        box-shadow: 0em 1em 2.75em hsla(203, 89%, 53%, 0.1), 0em 0.22em 0.6em hsla(203, 89%, 53%, 0.05);
    }
    .admonition.tweet ::selection {
        background: hsla(203, 89%, 53%, var(--selection-background-opacity));
    }
.admonition.tweet .admonition-title:before,
.admonition.tweet > p:first-child:before {
    content: url("data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PScwIDAgMjUwIDI1MCcgdmVyc2lvbj0nMS4xJyB4bWxucz0n aHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHhtbG5zOnhsaW5rPSdodHRwOi8v d3d3LnczLm9yZy8xOTk5L3hsaW5rJz4gPGcgc3Ryb2tlPSdub25lJyBzdHJva2Ut d2lkdGg9JzEnIGZpbGw9J25vbmUnIGZpbGwtcnVsZT0nZXZlbm9kZCc+PHBhdGgg ZD0nTTc4LjYyLDI0OS41OSBDMTcyLjk2LDI0OS41OSAyMjQuNTYsMTcxLjQzIDIy NC41NiwxMDMuNjUgQzIyNC41NiwxMDEuNDMgMjI0LjU2LDk5LjIyIDIyNC40MSw5 Ny4wMiBDMjM0LjQ0ODMxNCw4OS43NTkxMDg2IDI0My4xMTM1NTUsODAuNzY4Nzk0 IDI1MCw3MC40NyBDMjQwLjYzODc5MSw3NC42MTgwMTc3IDIzMC43MDgyOTMsNzcu MzM4Mjg2NSAyMjAuNTQsNzguNTQgQzIzMS4yNDc0NCw3Mi4xMjk4MjA2IDIzOS4y NjEyMzUsNjIuMDQ3NzE5OSAyNDMuMDksNTAuMTcgQzIzMy4wMjE1NzUsNTYuMTQ0 NTUzMiAyMjIuMDA2NDYxLDYwLjM1NTEyMDIgMjEwLjUyLDYyLjYyIEMxOTQuNjIw ODI4LDQ1LjcxMzk0MjggMTY5LjM1NzE5NCw0MS41NzYxMjU4IDE0OC44OTU0OTMs NTIuNTI2Nzk5MyBDMTI4LjQzMzc5Miw2My40Nzc0NzI3IDExNy44NjI3NSw4Ni43 OTMyNTczIDEyMy4xMSwxMDkuNCBDODEuODY4OTU3NCwxMDcuMzMyNDk1IDQzLjQ0 NDc1NzgsODcuODUzMjMyNyAxNy40LDU1LjgxIEMzLjc4NjIyNzU2LDc5LjI0NjQ0 NzMgMTAuNzM5ODc4OCwxMDkuMjI4NTk1IDMzLjI4LDEyNC4yOCBDMjUuMTE3NDEy LDEyNC4wMzgwNzUgMTcuMTMyNzkzNywxMjEuODM2MTMyIDEwLDExNy44NiBDMTAs MTE4LjA3IDEwLDExOC4yOSAxMCwxMTguNTEgQzEwLjAwNjY4MTMsMTQyLjkyNTkz IDI3LjIxNzUxNDksMTYzLjk1NTM1MiA1MS4xNSwxNjguNzkgQzQzLjU5ODY5Niwx NzAuODQ5NCAzNS42NzU4MDU5LDE3MS4xNTA0NDMgMjcuOTksMTY5LjY3IEMzNC43 MDk0NzkzLDE5MC41NjQyMjggNTMuOTY1NzQ1NiwyMDQuODc3ODM5IDc1LjkxLDIw NS4yOSBDNTcuNzQ3MzUwNCwyMTkuNTY0MzE5IDM1LjMxMDU5NTEsMjI3LjMxMzI3 NyAxMi4yMSwyMjcuMjkgQzguMTI5MDM1NjksMjI3LjI4MjE2NSA0LjA1MjA0MDY1 LDIyNy4wMzUwNzUgMCwyMjYuNTUgQzIzLjQ1NjM1OTUsMjQxLjYwMjc2NiA1MC43 NDkxMzQsMjQ5LjU4NzE2OSA3OC42MiwyNDkuNTUnIGZpbGw9JyNGRkZGRkYnIGZp bGwtcnVsZT0nbm9uemVybyc+PC9wYXRoPjwvZz48L3N2Zz4=");
    position: absolute;
    border-radius: 25%;
    height: var(--body-line-height);
    width: 0.875em;
    padding-left: 0.3125em;
    padding-right: 0.3125em;
    margin-left: -2em;
    background-color: #1DA1F2;
}
    .admonition.tweet g {
        fill: white;
    }
.admonition.tweet a {
    color: #1DA1F2;
}
.admonition.tweet a:hover {
    background-color: hsla(203, 89%, 53%, 0.1);
}
    #dark .admonition.tweet a:hover {
        background-color: hsla(203, 89%, 53%, 0.15);
    }


/********************
 ***  9. MENUBAR  ***
 ********************/

/**
 * The bar itself.
 */
#menubar {
    font-size: 1.3em;
    font-weight: 600;

    top: 0;
    width: 100%;
    text-align: center;
}
    @supports (padding-left: env(safe-area-inset-left)) {
        #menubar {
            padding-left: env(safe-area-inset-left);
            padding-right: env(safe-area-inset-right);
        }
    }
#menubar a {
    color: var(--accent-color);
    color: var(--accent-p3-color);
}
    #menubar > a {
        background-color: unset;
    }
    #menubar menu a {
        /*border-radius: 0.25em;*/
        border-radius: var(--rem-half-gap);

        padding-top: 0.25em;
        padding-bottom: 0.27em;
        padding-left: 0.75em;
        padding-right: 0.75em;
    }
        #menubar menu a.active  {
            border: 3px solid color(var(--accent-hsl-core) / var(--highlight-background-opacity));
            border: 3px solid color(var(--accent-p3-core) / var(--highlight-background-opacity));
            box-shadow: 0 0em 0.87em -0.2em hsla(var(--accent-hue), var(--accent-saturation), calc(var(--accent-lightness) - 3%), 0.2);
        }
/**
 * The Happy iMac & signature
 * #logo is the element wrapping both components.
 */
#logo {
    z-index: 1;
    margin-top: 1.414em;
    display: inline-block;
}
#imac {
    display: inline-block;
    vertical-align: top;
    width: 48px;
    height: 48px;
    /**
     * Without this, the closed eyes smile rendering gets screwed up in Safari.
     */
    -webkit-transform: translateZ(0);
}
    .imac-background-color {
        fill: white;
    }
    .imac-line-color {
        fill: rgba(30, 30, 30, 0.6);
    }
    .opened-eyes {
        opacity: 1;
    }
    .closed-eyes,
    .sunglasses {
        opacity: 0;
    }
        #logo:hover .opened-eyes {
            opacity: 0;
        }
        #logo:hover .closed-eyes {
            opacity: 1;
        }
    .smirk,
    #dark .opened-eyes {
        opacity: 0;
    }
    #dark .sunglasses {
        opacity: 1;
    }
        #dark #logo:hover .closed-eyes {
            opacity: 0;
        }
        #dark #logo:hover .smirk {
            opacity: 1;
        }
    .sunglasses,
    .closed-eyes,
    .opened-eyes,
    .smirk {
        transition: opacity var(--cubic-bezier-transition);
    }
    /**
     * The rainbow backsplash on hover
     */
    #logo:after {
        position: absolute;
        z-index: -1;
        top: -1rem;
        left: calc(50% - 10rem);
        height: 9rem;
        width: 18.75rem;
        opacity: 0;
        transform: scale(0.6);
        transition: opacity 300ms ease-in, transform 150ms ease-in;
        content: "";
        filter: blur(1em) saturate(200%) hue-rotate(0deg);
        background: conic-gradient(var(--red-color), var(--orange-color), var(--yellow-color), var(--green-color), var(--blue-color), var(--purple-color), var(--red-color));
        background: conic-gradient(var(--red-p3-color), var(--orange-p3-color), var(--yellow-p3-color), var(--green-p3-color), var(--blue-p3-color), var(--purple-p3-color), var(--red-p3-color));
        border-radius: 100%;
        animation: rainbowCycle 10s infinite linear;
        animation-play-state: paused;
    }
    #logo.active:after,
    #logo:hover:after {
        transform: scale(1);
        animation-play-state: running;
        opacity: 0.25;
    }
/* ... */

